[package]
name = "espmonitor"
version = "0.3.0"
description = "Monitors ESP8266 and ESP32 execution over serial"
license = "GPL-3.0"
authors = [
    "Brian J. Tarricone <brian@tarricone.org>",
]
homepage = "https://github.com/esp-rs/espmonitor"
repository = "https://github.com/esp-rs/espmonitor"
edition = "2018"
readme = "../README.md"
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::debugging",
    "embedded",
]
keywords = [
    "esp32",
    "esp8266",
]

[[bin]]
name = "espmonitor"
path = "src/main.rs"

[lib]

[dependencies]
lazy_static = "1"
mio = "0.7"
mio-serial = "5"
nix = "0.22"
pico-args = "0.4"
regex = "1"

[target.'cfg(unix)'.dependencies]
termios = "0.3"
