[package]
name = "espmonitor"
version = "0.5.3-alpha.1"
description = "Monitors ESP8266 and ESP32 execution over serial"
license = "GPL-3.0"
authors = [
    "Brian J. Tarricone <brian@tarricone.org>",
]
homepage = "https://github.com/esp-rs/espmonitor"
repository = "https://github.com/esp-rs/espmonitor"
edition = "2018"
readme = "../README.md"
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::debugging",
    "embedded",
]
keywords = [
    "esp32",
    "esp8266",
]

[[bin]]
name = "espmonitor"
path = "src/main.rs"

[lib]

[dependencies]
crossterm = "0.22"
lazy_static = "1"
pico-args = "0.4"
regex = "1"
serial = "0.4"

[target.'cfg(unix)'.dependencies]
nix = "0.22"
